# test_hw

./: conftest.py  pyproject.toml  requirements.txt
components/: components.py
pages/: base_page.py  elements_page.py  swag_labs.py
tests/: test_check_text.py
