[tool.poetry]
name = "demoqa-home"
version = "0.1.0"
description = ""
authors = ["AlienIsolation525 <vitrage091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
webdriver-manager = "^4.0.2"
selenium = "^4.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
